--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "lucide-react": "^0.376.0",
     "mongo": "^0.1.0",
     "mongoose": "^8.3.3",
+    "js-cookie": "^3.0.5",
+    "mathjax": "^3.2.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-latex": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "20.12.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
