--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-latex": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.23.5"
   },
   "devDependencies": {
