--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@aws-sdk/client-s3": "^3.574.0",
     "@aws-sdk/s3-request-presigner": "^3.574.0",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.376.0",
     "mathjax": "^3.2.2",
@@ -29,11 +33,14 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-latex": "^2.0.0",
+    "react-modal": "^3.16.1",
+    "react-pdf": "^8.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
@@ -45,6 +52,7 @@
     "@types/node": "20.12.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
