--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.11.0",
     "@react-pdf/renderer": "^3.4.4",
+    "@react-pdf-viewer/core": "^3.11.0",
+    "@react-pdf-viewer/toolbar": "^3.11.0",
+    "@react-pdf-viewer/zoom": "^3.11.0",
+    "pdfjs-dist": "^3.11.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,7 +37,6 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "pdfjs-dist": "^3.0.279",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
