Remove button updated

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "resumemaker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,12 +20,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-pdf-viewer/default-layout": "^3.11.0",
-    "@react-pdf/renderer": "^3.4.4",
     "@react-pdf-viewer/core": "^3.11.0",
+    "@react-pdf-viewer/default-layout": "^3.11.0",
     "@react-pdf-viewer/toolbar": "^3.11.0",
     "@react-pdf-viewer/zoom": "^3.11.0",
-    "pdfjs-dist": "^3.11.0",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "pdfjs-dist": "^3.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -44,6 +45,7 @@
     "react-latex": "^2.0.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^8.0.2",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
